# Bayesian-Statistic-Project

./: Call_GibbsSamplerBB.r  Call_GibbsSamplerBB_hastings_sigma_rmd.Rmd  Call_GibbsSamplerBB_hastings_sigma_rmd.html  Call_GibbsSamplerBB_rmd.Rmd  Call_GibbsSamplerBB_rmd.html  Call_GibbsSamplerBB_update2A_rmd.Rmd  Call_GibbsSamplerBB_update2A_rmd.html  Call_GibbsSamplerBB_updateA_rmd.Rmd  Call_GibbsSamplerBB_updateA_rmd.html  Call_GibbsSamplerIBP.r  Call_GibbsSamplerIBP_rmd.Rmd  GibbsSamplerBB.cpp  GibbsSamplerBB_anto.cpp  GibbsSamplerBB_hastings_sigma.cpp  GibbsSamplerBB_hastings_sigma_anto.cpp  GibbsSamplerBB_nuovofile.cpp  GibbsSamplerBB_update2A.cpp  GibbsSamplerBB_updateA.cpp  GibbsSamplerIBP.cpp  GibbsSamplerIBP_nuovofile.cpp  GibbsSamplerIBP_sample2_A.cpp  GibbsSampler_betabernoulli.cpp  GibbsSampler_betabernoulli_anto.R  GibbsSampler_hastings_sigma.cpp  README.md  auxiliar_functions.cpp  auxiliar_functions.h  auxiliar_functions_anto.cpp  auxiliar_functions_anto.h  metropolis_hastings_step_another_version.cpp  new_GS_BB_updateA.cpp  slide.tex  truncated_normal.cpp  truncated_normal.h
CLion Only code/: CMakeLists.txt  GibbsSampler_betabernoulli.cpp  GibbsSampler_betabernoulli.h  README.txt  auxiliar_functions.cpp  auxiliar_functions.h  main.cpp
CLion-Only Project/: CMakeLists.txt  README.txt  auxiliar_functions.cpp  auxiliar_functions.h  main.cpp  truncated_normal.h
